# hdcb

./: Makefile  Makefile.am  Makefile.in  README.md  apply-color.sh  apply-func.sh  color.c  color.h  colors.sh  colour.c  configure  configure.ac  dict.c  dict.h  file-func.sh  func.sh  hdcb-func.sh  hdcb.sh  mbr.hdcb  num-func.sh  setup.py  test.hdcb
examples/: Makefile.am  Makefile.in  bmp.hdcb  mbr.hdcb
scripts/: Makefile.am  Makefile.in  colors.sh  file-func.sh  hdcb-func.sh  hdcb-func.sh.in  hdcb.sh  hdcb.sh.in  num-func.sh
src/: Makefile.am  Makefile.in  color.c  color.h  colour.c  dict.h
